@@ -7,7 +7,7 @@
     <groupId>com.zhangyj</groupId>
     <artifactId>one-click-executor</artifactId>
     <packaging>pom</packaging>
-    <version>5.0.0</version>
+    <version>6.0.0</version>
     <modules>
         <module>component</module>
         <module>boot</module>
@@ -16,7 +16,8 @@
 
     <properties>
         <!--springboot2.1.0.RELEASE到springboot2.1.9使用Greenwich.SR2版本的springcloud,具体的版本匹配参考:(https://start.spring.io/actuator/info)-->
-        <spring-boot.version>2.7.18</spring-boot.version>
+        <spring-boot.version>3.5.5</spring-boot.version>
+        <java.version>21</java.version>
     </properties>
 
     <!--版本控制-->
@@ -34,19 +35,19 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-
             <!-- 全局版本配置插件 -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
             </plugin>
         </plugins>
     </build>
